--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="container">
-  <h1>Invoice calculator</h1>
+  <a class="nav-link text-primary" routerLink="/"><h1>Invoice calculator</h1></a>
   <router-outlet></router-outlet>
 </div>
-
