--- a/src/app/customers/customer-form/customer-form.component.html
+++ b/src/app/customers/customer-form/customer-form.component.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     <button type="submit" class="btn btn-primary">
-      Submit
+      Open orders
     </button>
   </form>
 </div>
